--- a/Week4/Week4_1/pom.xml
+++ b/Week4/Week4_1/pom.xml
@@ -5,4 +5,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Week4Lab</name>
   <description>Lab for Week 4</description>
+
+<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-all</artifactId>
+    <version>1.3</version>
+</dependency>
+
 </project>
